change the titles

--- a/cv.html
+++ b/cv.html
@@ -82,7 +82,7 @@
       text-align: center;
     }
   </style>
-  <title>CV</title>
+  <title>Rei Sato - CV</title>
 </head>
 <body>
   <header style="background-color: #2e5e2e; text-align: center; padding: 10px 0;">
