--- a/news.html
+++ b/news.html
@@ -59,7 +59,7 @@
       text-align: center;
     }
   </style>
-  <title>news</title>
+  <title>Rei Sato - News</title>
 </head>
 <body>
   <header style="background-color: #2e5e2e; text-align: center; padding: 10px 0;">
