--- a/research.html
+++ b/research.html
@@ -59,7 +59,7 @@
       text-align: center;
     }
   </style>
-  <title>research</title>
+  <title>Rei Sato - Research</title>
 </head>
 <body>
   <header style="background-color: #2e5e2e; text-align: center; padding: 10px 0;">
