--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       text-align: center;
     }
   </style>
-  <title>home</title>
+  <title>Rei Sato - Home</title>
 </head>
 <body>
   <header style="background-color: #2e5e2e; text-align: center; padding: 10px 0;">
