--- a/cv.html
+++ b/cv.html
@@ -143,7 +143,7 @@
       <p>[4] <u>佐藤 嶺</u>, 河合 研志. (2023). Constraining 3-D S- and P-velocity structure of D″ beneath the Central America from multiple component data using waveform inversion. 日本地球惑星科学連合2023年大会 (JpGU2023), 幕張, 口頭.</p> 
       <p>[3] <u>佐藤 嶺</u>. (2023). 波形インバージョンによる中米下D″領域の三次元S・P波速度同時構造推定. 第9回愛媛大学先進超高圧科学研究拠点(PRIUS)シンポジウム, 松山, ポスター.</p> 
       <p>[2] <u>佐藤 嶺</u>, 河合 研志. (2022). 波形インバージョンによる中米下D″領域の三次元S・P波速度同時構造推定. 日本地震学会2022年秋季大会, 札幌, 口頭.</p> 
-      <p>[1] <u>佐藤 嶺</u>, 鈴木 裕輝, 河合 研志. (2022). Inferring 3-D S- and P-velocity structure of D″ beneath the Central America using waveform inversion. 日本地球惑星科学連合2022年大会 (JpGU2022), 幕張, 2022年5月. 口頭.</p> 
+      <p>[1] <u>佐藤 嶺</u>, 鈴木 裕輝, 河合 研志. (2022). Inferring 3-D S- and P-velocity structure of D″ beneath the Central America using waveform inversion. 日本地球惑星科学連合2022年大会 (JpGU2022), 幕張, 口頭.</p> 
     </section>
     
     <section id="grants">
