--- a/cv.html
+++ b/cv.html
@@ -128,8 +128,8 @@
 
     <section id="publication">
       <h2>Publication</h2>
-      <p>[3] (under review) <u>Sato, R.</u>, Kawai, K., Geller, R. J. Seismic Waveform Inversion for 3-D S- and P-wave Velocity Structure in D″ beneath Central America and the Caribbean: Evidence for Chemical Heterogeneity due to MORB Accumulation. under review.</p>
-      <p>[2] (non-peer-reviewed) <u>佐藤嶺</u>. (2025). 地震波形インバージョンによるマントル最下部のS・P波速度構造同時推定—地球深部の熱・化学進化の理解に向けて—, i<i>スーパーコンピューティングニュース, 27</i>(2), 53-67.</p>
+      <p>[3] (under revision) <u>Sato, R.</u>, Kawai, K., Geller, R. J. Seismic Waveform Inversion for 3-D S- and P-wave Velocity Structure in D″ beneath Central America and the Caribbean: Evidence for Chemical Heterogeneity due to MORB Accumulation. under review.</p>
+      <p>[2] (non-peer-reviewed) <u>佐藤嶺</u>. (2025). 地震波形インバージョンによるマントル最下部のS・P波速度構造同時推定—地球深部の熱・化学進化の理解に向けて—, <i>スーパーコンピューティングニュース, 27</i>(2), 53-67.</p>
       <p>[1] (non-peer-reviewed) <u>佐藤嶺</u>. (2024). 地震波形インバージョンによるマントル最下部のS・P波速度構造同時推定—地球深部の熱・化学進化の理解に向けて—, <i>スーパーコンピューティングニュース, 26</i>(2), 41-46.</p>
     </section>
 
