--- a/cv.html
+++ b/cv.html
@@ -128,9 +128,13 @@
 
     <section id="publication">
       <h2>Publication</h2>
-      <p>[3] (under revision) <u>Sato, R.</u>, Kawai, K., Geller, R. J. Seismic Waveform Inversion for 3-D S- and P-wave Velocity Structure in D″ beneath Central America and the Caribbean: Evidence for Chemical Heterogeneity due to MORB Accumulation. under review.</p>
-      <p>[2] (non-peer-reviewed) <u>佐藤嶺</u>. (2025). 地震波形インバージョンによるマントル最下部のS・P波速度構造同時推定—地球深部の熱・化学進化の理解に向けて—, <i>スーパーコンピューティングニュース, 27</i>(2), 53-67.</p>
-      <p>[1] (non-peer-reviewed) <u>佐藤嶺</u>. (2024). 地震波形インバージョンによるマントル最下部のS・P波速度構造同時推定—地球深部の熱・化学進化の理解に向けて—, <i>スーパーコンピューティングニュース, 26</i>(2), 41-46.</p>
+      <h3>Peer-reviewed</h3>
+      <p>[2] (under revision) <u>Sato, R.</u>, Kawai, K., Geller, R. J. Seismic Waveform Inversion for 3-D S- and P-wave Velocity Structure in D″ beneath Central America and the Caribbean: Evidence for Chemical Heterogeneity due to MORB Accumulation. under review.</p>
+      <p>[1] <u>佐藤嶺</u>. (2025). 砥粒脱落を考慮したGrinding 作業の数理モデルの拡張と試験的検証, <i>数理科学実践研究レター</i>, LMSR2025-1. <a href="https://www.ms.u-tokyo.ac.jp/lmsr/2025/" target="_blank" rel="noopener noreferrer">https://www.ms.u-tokyo.ac.jp/lmsr/2025/</a></p>
+
+      <h3>Non-peer-reviewed</h3>
+      <p>[2] <u>佐藤嶺</u>. (2025). 地震波形インバージョンによるマントル最下部のS・P波速度構造同時推定—地球深部の熱・化学進化の理解に向けて—, <i>スーパーコンピューティングニュース, 27</i>(2), 53-67.</p>
+      <p>[1] <u>佐藤嶺</u>. (2024). 地震波形インバージョンによるマントル最下部のS・P波速度構造同時推定—地球深部の熱・化学進化の理解に向けて—, <i>スーパーコンピューティングニュース, 26</i>(2), 41-46.</p>
     </section>
 
     <section id="presentation">
