--- a/news.html
+++ b/news.html
@@ -79,6 +79,18 @@
       <h2>News</h2>
     </section>
 
+<!--
+    <section id="4">
+      <h3></h3>
+      <p></p>
+    </section>
+-->
+    
+    <section id="3">
+      <h3>2025.08.07: 数理科学実践研究レターが公開されました</h3>
+      <p>数物フロンティア国際卓越大学院(WINGS-FMSP)における社会数理実践研究の成果「砥粒脱落を考慮したGrinding 作業の数理モデルの拡張と試験的検証」が<a href="https://www.ms.u-tokyo.ac.jp/lmsr/2025/" target="_blank" rel="noopener noreferrer">数理科学実践研究レター</a>にて公開されました。回転砥石による工作物の研削過程を数理モデル化した上で、二つの直交するgrinder の移動方向に関して数値シミュレーションを行うことで、より効率的にgirinding 作業を行うための条件を考察しました。</p>
+    </section>
+
     <section id="2">
       <h3>2025.07.19 JpGU2025学生優秀発表賞を受賞しました</h3>
       <p>2025年5月に幕張にて開催されたJpGU2025での発表が学生優秀発表書に選ばれました。共著者の皆様、審査に携わって頂いた皆様に深く御礼申し上げます。</p>
