--- a/cv.html
+++ b/cv.html
@@ -128,7 +128,7 @@
     <section id="publication">
       <h2>Publication</h2>
       <h3>Peer-reviewed</h3>
-      <p>[2] (under revision) <u>Sato, R.</u>, Kawai, K., Geller, R. J. Seismic Waveform Inversion for 3-D S- and P-wave Velocity Structure in D″ beneath Central America and the Caribbean: Evidence for Chemical Heterogeneity due to MORB Accumulation. under review.</p>
+      <p>[2] <u>Sato, R.</u>, Kawai, K., Geller, R. J. (2025). Seismic Waveform Inversion for 3-D S- and P-wave Velocity Structure in D″ Beneath Central America and the Caribbean: Evidence for Chemical Heterogeneity Due To MORB Accumulation. <i>Journal of Geophysical Research: Solid Earth, 130</i>(10), e2024JB030931. <a href="https://doi.org/10.1029/2024JB030931" target="_blank" rel="noopener noreferrer">https://doi.org/10.1029/2024JB030931</a></p>
       <p>[1] <u>佐藤嶺</u>. (2025). 砥粒脱落を考慮したGrinding 作業の数理モデルの拡張と試験的検証, <i>数理科学実践研究レター</i>, LMSR2025-1. <a href="https://www.ms.u-tokyo.ac.jp/lmsr/2025/" target="_blank" rel="noopener noreferrer">https://www.ms.u-tokyo.ac.jp/lmsr/2025/</a></p>
 
       <h3>Non-peer-reviewed</h3>
