--- a/news.html
+++ b/news.html
@@ -86,18 +86,23 @@
     </section>
 -->
     
+    <section id="4">
+      <h3>2025.10.10: 主著論文がJournal of Geophysical Research: Solid Earthにて出版されました</h3>
+      <p>地震波形解析によるS波・P波速度構造の高解像度イメージングを行い、中米下のマントル最下部に組成的異常が存在することを発見しました！本研究では地震波形解析「波形インバージョン法」を拡張し、北米の緻密地震観測網USArrayの膨大な波形データを解析することで、中米下マントル最下部のS波・P波速度構造を世界最高解像度で推定しました。これにより、マントル最下部での温度異常と組成的異常のマッピングが可能となりました。推定モデルによると、対象領域の大部分は冷たい沈み込みスラブ（プレート）と温かい上昇流が占めている一方で、コロンビア下などの限られた領域には組成的異常が存在していることが判明しました。この組成的異常はスラブから供給された海洋地殻成分と考えられ、部分溶融や上昇流の「根」となる可能性を示唆しました。詳しい内容はぜひ原論文をご覧ください！<a href="https://doi.org/10.1029/2024JB030931" target="_blank" rel="noopener noreferrer">link</a></p>
+    </section>
+
     <section id="3">
       <h3>2025.08.07: 数理科学実践研究レターが公開されました</h3>
       <p>数物フロンティア国際卓越大学院(WINGS-FMSP)における社会数理実践研究の成果「砥粒脱落を考慮したGrinding 作業の数理モデルの拡張と試験的検証」が<a href="https://www.ms.u-tokyo.ac.jp/lmsr/2025/" target="_blank" rel="noopener noreferrer">数理科学実践研究レター</a>にて公開されました。回転砥石による工作物の研削過程を数理モデル化した上で、二つの直交するgrinder の移動方向に関して数値シミュレーションを行うことで、より効率的にgirinding 作業を行うための条件を考察しました。</p>
     </section>
 
     <section id="2">
-      <h3>2025.07.19 JpGU2025学生優秀発表賞を受賞しました</h3>
+      <h3>2025.07.19: JpGU2025学生優秀発表賞を受賞しました</h3>
       <p>2025年5月に幕張にて開催されたJpGU2025での発表が学生優秀発表書に選ばれました。共著者の皆様、審査に携わって頂いた皆様に深く御礼申し上げます。</p>
     </section>
     
     <section id="1">
-      <h3>2025.07.19 ホームページを開設しました</h3>
+      <h3>2025.07.19: ホームページを開設しました</h3>
       <p>ホームページを開設しました。</p>
     </section>
   </main>
