--- a/cv.html
+++ b/cv.html
@@ -138,6 +138,8 @@
 
     <section id="presentation">
       <h2>Presentation</h2>
+      <p>[13] <u>佐藤 嶺</u>, 河合 研志. (2025). 波形インバージョンを用いた中米下D″領域の三次元異方性S・P波速度構造推定. 日本地震学会2025年秋季大会, 博多, 口頭.</p>
+      <p>[12] 大林 徹, <u>佐藤 嶺</u>, 河合 研志. (2025). 回折波データを活用した波形インバージョン法による太平洋北東部下外核最下部の1次元P波速度構造推定. 日本地震学会2025年秋季大会, 博多, 口頭.</p> 
       <p>[11] <u>佐藤 嶺</u>, 河合 研志, 石橋 凌一. (2025). 沈み込みスラブと最下部マントル物質の相互作用：波形インバージョンによる中米下の鉛直軸対象異方性構造からの洞察. 日本地球惑星科学連合2025年大会 (JpGU2025), 幕張, 口頭.</p>
       <p>[10] 大林 徹, <u>佐藤 嶺</u>, 河合 研志. (2025). 波形インバージョン法を用いた太平洋北東部下の外核最下部の1次元P波速度構造推定. 日本地球惑星科学連合2025年大会 (JpGU2025), 幕張, 口頭.</p> 
       <p>[9] 新名 良介, 河口 沙織, <u>佐藤 嶺</u>, 大鶴 啓介, 河合 研志, 佐久間 博, 末原 茂, 石井 貴之, 米谷 珠萌. (2025). Cold SiO2-rich slabs reaching the CMB revealed by the seifertite phase boundary. 日本地球惑星科学連合2025年大会 (JpGU2025), 幕張, 口頭.</p> 
