--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
     <section id="news">
       <h2>Recent News</h2>
       <ul>
-        <li>2025.10.10: 主著論文がJournal of Geophysical Research: Solid Earthにて出版されました<</li>
+        <li>2025.10.23: 日本地震学会2025年秋季大会で発表しました</li>
+        <li>2025.10.10: 主著論文がJournal of Geophysical Research: Solid Earthにて出版されました</li>
         <li>2025.08.07: 数理科学実践研究レターが公開されました</li>
         <li>2025.07.19: JpGU2025学生優秀発表賞を受賞しました</li>
         <li>2025.07.19: ホームページを開設しました</li>
