--- a/news.html
+++ b/news.html
@@ -89,8 +89,8 @@
     <section id="5">
       <h3>2025.10.23: 日本地震学会2025年秋季大会で発表しました</h3>
       <p>2025年10月20日から22日にかけて福岡県で開催された2025年度地震学会秋季大会にて口頭発表を行いました。発表では異方性効果も考慮した最下部マントルのS・P波速度構造推定を公表し、沈み込みスラブが引き起こす化学異常や流動に関して議論を行いました。また、共著の口頭発表もなされ、外核最下部の地震波速度構造の発表が行われました。</p>
-      <p><u>佐藤 嶺</u>, 河合 研志. (2025). 波形インバージョンを用いた中米下D″領域の三次元異方性S・P波速度構造推定. 日本地震学会2025年秋季大会, 博多, 口頭.</p>
-      <p>大林 徹, <u>佐藤 嶺</u>, 河合 研志. (2025). 回折波データを活用した波形インバージョン法による太平洋北東部下外核最下部の1次元P波速度構造推定. 日本地震学会2025年秋季大会, 博多, 口頭.</p> 
+      <p><li><u>佐藤 嶺</u>, 河合 研志. (2025). 波形インバージョンを用いた中米下D″領域の三次元異方性S・P波速度構造推定. 日本地震学会2025年秋季大会, 博多, 口頭.</li>
+      <li>大林 徹, <u>佐藤 嶺</u>, 河合 研志. (2025). 回折波データを活用した波形インバージョン法による太平洋北東部下外核最下部の1次元P波速度構造推定. 日本地震学会2025年秋季大会, 博多, 口頭.</li></p> 
     </section>
     
     <section id="4">
